test/resources/parseErrors/Bad1.java
package example;

import java.util.*;
import static java.util.Collections.sort;
import java.io.File;

public class Test1 {
	public void test0() {
		java.lang.String x = null;
		int z = 0x20;
		float a = 1.234F;
		java.util<?>.List<String>[] q;
	}
	
	public void test() {
		java.lang.String x = null;
		int z = 0x20;
		float a = 1.234F;
		java.util<?>.List<String>[] q;
	
	public void test2() {
		java.lang.String x = null;
		int z = 0x20;
		float a = 1.234F;
		java.util<?>.List<String>[] q;
	}
}

class X {
	{
		int x = 10 + 20 + 30;
		if (x <<< 2 < 10) {
			System.out.println("Whoa!");
		} else System.exit(0);
		if (x <<< 2 < 10) {
			System.out.println("Whoa!");
		}
		int y = (10 + 20) + 30;
		int z = ((10 + 20) + 30);
		int a = 10 + (20 + 30);
		int b = 10 + 20 * 30;
		int c = (10 + 20) * 30;
		boolean d = (c + d) instanceof Integer;
		boolean g = a < 0;
		int e = a > 0 ? true : b < 0 ? true : false;
		int f = (a > 0 ? true : b < 0) ? true : false;
		
		for (  int i = 0, j=1  ; i < 10; i++, j++ ) for (String x : Collections.emptyList()) {
			System.out.println(i);
		}
		
		try {
			something();
		} catch (Exception e) {
			somethingElse();
		} catch (java.lang.Throwable e) {
			somethingElseEntirely();
		} finally {
			nothing();
		}
	}
	
	static {
		int y = 20;
	}
}
